[TASK] Fix hmbrgr z-index

--- a/Resources/Public/Css/Menus/hmbrgr.css
+++ b/Resources/Public/Css/Menus/hmbrgr.css
@@ -4,7 +4,7 @@
     cursor: pointer;
     width: 3rem;
     height: 2.5rem;
-    z-index: 1;
+    z-index: 999999999;
     right: 1rem;
     top: 1rem;
     transition: all .4s ease-in-out;
